# obsidian

./: Untitled.canvas  package-lock.json  package.json
.obsidian/: community-plugins.json  daily-notes.json  graph.json  workspace.json
.obsidian/plugins/obsidian-day-planner/: data.json
Knawledge/: Vydělávání peněz s Ježíšem.md
Knawledge/Projekty/: Stan-se-ORGEM.docx
Plánování/: Co se potřebuju doučit + TO DO list.md  Structured TODO.md
Plánování/.obsidian/: community-plugins.json  daily-notes.json  graph.json  hotkeys.json  workspace.json
Plánování/Budoucnost/: malé věci.md
Plánování/Daily/: 2024-02-25.md
Plánování/Daily notes/: 0 Dailynote Index.md  2024-02-10.md  2024-02-11.md  2024-02-13.md  2024-02-18.md
Škola/: Co se potřebuju doučit.md
Škola/.obsidian/: graph.json  workspace.json
Škola/1. semestr/PA1/: datové typy shrnutí.md
Škola/1. semestr/PA1/Praktický test/: rekurze.md  (+4 more)
Škola/2. semestr/: Rozcestník 2. semestr.md  Rozcestník.md
Škola/2. semestr/DBS/: 1. Přednáška - Úvod, organizace, Základní pojmy.md  Index DBS.md
Škola/2. semestr/KSA/: 1. Přednáška - Úvod.md  2. Přednáška - Terénní výzkumy, metody antropologického výzkumu - přednáší Alena Libánská.md  Index KSA.md
Škola/2. semestr/LA2/: 0. Index + nultá přednáška.md  Index LA2.md  Požadavky.md
Škola/2. semestr/MA1/: Index MA1.md
Škola/2. semestr/PA2/: Index PA2.md
Škola/2. semestr/PA2/projekty/procvicovani/untitled1/: CMakeLists.txt
Škola/2. semestr/SAP/: 1. laboratoř.md  Index SAP.md
Škola/2. semestr/VAK/: 1. "Důkazové" techniky.md  2. Grafové problémy.md  Index VAK.md
(+142 files in other folders)
